--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ jinja2>=3.1.2
 selenium>=4.9.0
 webdriver-manager>=3.8.6
 requests>=2.28.0
-pytest-asyncio>=0.21.0 
+pytest-asyncio>=0.21.0
+psutil>=5.9.0 
