redesign backend, update frontend and connections, organize docs and tests

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,24 @@ venv.bak/
 
 # Database
 *.db
+*.db-shm
+*.db-wal
 *.sqlite
 *.sqlite3
 users.json
+
+# Sensitive data
+*.env
+*.env.*
+!*.env.example
+config.json
+secrets.json
+credentials.json
+.credentials
+*.pem
+*.key
+*.cert
+*.crt
 
 # Logs
 logs/*
@@ -41,6 +56,12 @@ logs/*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Backup files
+backups/
+*.backup
+*.dump
+*.sql
 
 # Frontend / Node
 frontend/node_modules/
@@ -72,3 +93,4 @@ htmlcov/
 
 # Keep .gitkeep files
 !logs/.gitkeep 
+.claude/
